--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Styles -->
         <link rel="stylesheet" href="css/main.css" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-        <link rel="icon" href="img/icons/logo-icon.svg" type="image/x-icon" />
+        <link rel="icon" href="img/icons/favicon.png" type="image/x-icon" />
     </head>
     <body id="body">
         <header class="header" id="header">
@@ -42,9 +42,6 @@
                         <ul class="nav__list">
                             <li class="nav__item">
                                 <a href="#" class="nav__link" target="_blank" data-scroll="#header">Main</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="#" class="nav__link" target="_blank" data-scroll="#mint">Mint</a>
                             </li>
                             <li class="nav__item">
                                 <a href="#" class="nav__link" target="_blank" data-scroll="#about">About</a>
@@ -66,18 +63,22 @@
                             <span class="burger"></span>
                             <span class="burger-text">Menu</span>
                         </button>
-                        <li class="socials-item">
-                            <a href="index_ch.html">
-                                <img src="img/icons/china.png" alt="Chine icon" />
-                            </a>
-                        </li>
+                        <ul class="socials-btns">
+                            <li class="socials-item">
+                                <a href="mint.html" class="btn btn-socials">
+                                    Mint
+                                </a>
+                            </li>
+                            <li class="socials-item">
+                                <a href="index_ch.html">
+                                    <img src="img/icons/china.png" alt="Chine icon" />
+                                </a>
+                            </li>
+                        </ul>
                         <nav class="mobile-nav" id="mobile-nav">
                             <ul class="nav__list">
                                 <li class="nav__item">
                                     <a href="#" class="nav__link" target="_blank" data-scroll="#header">Main</a>
-                                </li>
-                                <li class="nav__item">
-                                    <a href="#" class="nav__link" target="_blank" data-scroll="#mint">Mint</a>
                                 </li>
                                 <li class="nav__item">
                                     <a href="#" class="nav__link" target="_blank" data-scroll="#about">About</a>
@@ -97,6 +98,11 @@
                     </div> <!-- /.mobile__nav-wrapper -->
                     <!-- /.mobile__nav-wrapper -->
                     <ul class="socials">
+                        <li class="socials-item">
+                            <a href="mint.html" class="btn btn-socials">
+                                Mint
+                            </a>
+                        </li>
                         <li class="socials-item">
                             <a href="https://discord.com/" target="_blank">
                                 <img src="img/icons/ds.svg" alt="Ds icon" />
@@ -148,7 +154,7 @@
                         <div class="general__desc">
                             <p class="general__desc-text">
                                 <span>Mules of Wall Street</span> is a collection
-                                <span>of 8,888 unique NFTs</span> that live on the Ethereum blockchain. Your
+                                <span>of 7,777 unique NFTs</span> that live on the Ethereum blockchain. Your
                                 <span>Mules of Wall Street</span> membership card grants access to members-only benefits
                                 and exclusive raffles.
                             </p>
@@ -165,86 +171,6 @@
                 </div>
             </div> <!-- /.container -->
         </section> <!-- /.general -->
-
-        <!-- <section class="mint" id="mint">
-            <div class="container">
-                <div class="mint__inner">
-                    <div class="mint__info">
-                        <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
-                        <div class="mint__content">
-                            <h2 class="title">Mint section</h2>
-                            <div class="mint__calc">
-                                <div
-                                    class="mint__calc-btn"
-                                    id="decrease"
-                                    onclick="decreaseValue()"
-                                    value="Decrease Value"
-                                >
-                                    -
-                                </div>
-                                <input type="number" id="number" value="1" max="10" disabled/="">
-                                <div
-                                    class="mint__calc-btn"
-                                    id="increase"
-                                    onclick="increaseValue()"
-                                    value="Increase Value"
-                                >
-                                    +
-                                </div>
-                            </div>
-                            <div class="mint__price">
-                                <span><span id="price">0.1</span>eth</span>
-                            </div>
-                            <div target="_blank" class="mint__btn btn" id="mintBtn">Mint</div>
-                            <div target="_blank" class="mint__btn btn-white btn" id="connectWalletBtn">
-                                Connect Wallet
-                            </div>
-                        </div>
-                        <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
-                    </div> 
-                </div> 
-            </div> 
-        </section>  -->
-
-        <section class="mint" id="mint">
-            <div class="container">
-                <div class="mint__inner">
-                    <div class="mint__info">
-                        <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
-                        <div class="mint__content">
-                            <h2 class="title">Mint section</h2>
-                            <div class="mint__calc">
-                                <div
-                                    class="mint__calc-btn"
-                                    id="decrease"
-                                    onclick="decreaseValue()"
-                                    value="Decrease Value"
-                                >
-                                    -
-                                </div>
-                                <input type="number" id="number" value="1" max="10" disabled/="">
-                                <div
-                                    class="mint__calc-btn"
-                                    id="increase"
-                                    onclick="increaseValue()"
-                                    value="Increase Value"
-                                >
-                                    +
-                                </div>
-                            </div>
-                            <div class="mint__price">
-                                <span><span id="price">0.1</span>eth</span>
-                            </div>
-                            <a target="_blank" class="mint__btn btn">Minting soon</a>
-                            <div target="_blank" class="mint__btn btn-white btn" id="connectWalletBtn">
-                                Connect Wallet
-                            </div>
-                        </div>
-                        <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
-                    </div> 
-                </div> 
-            </div> 
-        </section> 
 
         <section class="about" id="about">
             <div class="container">
@@ -266,7 +192,7 @@
                     </ul>
                     <div class="about__desc">
                         <p class="about__desc-text">
-                            <span>A collection of 8,888 meta fashion avatars</span> based on the Ethereum blockchain.
+                            <span>A collection of 7,777 meta fashion avatars</span> based on the Ethereum blockchain.
                             Each unique <span>Mules of Wall Street</span> is randomly generated from combination
                             <span>of 99 individually</span> drawn elements, including
                             <span>over 55 different outfits</span>
@@ -284,7 +210,7 @@
                                     <img src="img/icons/supply.svg" alt="Icon" />
                                 </div>
                                 <p class="about__item-name">Supply</p>
-                                <p class="about__item-value">8,888</p>
+                                <p class="about__item-value">7,777</p>
                             </li>
                             <li class="about__info-item">
                                 <div class="about__item-img">
@@ -378,11 +304,7 @@
                                 <div class="map__card-content">
                                     <h3 class="map__card-title">DONE!</h3>
                                     <p class="map__text">
-                                        Launch of our developmental roadmap is,
-                                        <span
-                                            >heads up, diamond hands will get an opportunity to make passive
-                                            income</span
-                                        >
+                                        <span>Heads up, diamond hands will get an opportunity to make passive income</span>
                                         by holding your
                                         <span><span class="map__text-blue">Mules</span> of Wall Street!</span>
                                     </p>
@@ -470,7 +392,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="faq__accordion-item active">
+                                <li class="faq__accordion-item">
                                     <div class="faq__accordion-title">
                                         <h3>Where can I view my NFTS?</h3>
                                         <span class="faq__accordion-icon"></span>
