--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 and exclusive raffles.
                             </p>
                             <div class="general__buttons">
-                                <a href="https://opensea.io/collection/wallstreetmules" target="_blank" class="btn"
+                                <a href="https://opensea.io/collection/wall-street-mules" target="_blank" class="btn"
                                     >Buy on OpenSea</a
                                 >
                                 <a href="https://discord.com/" target="_blank" class="btn btn-white"
@@ -434,8 +434,8 @@
                         </li>
                     </ul>
                     <div class="footer__links">
-                        <a href="https://etherscan.io/" target="_blank" class="footer__adress"
-                            >0x4ghfdgklhgfl83ljfdgbdfjg4385lcbndlbn93294lmxcbnb84</a
+                        <a href="https://etherscan.io/address/0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670" target="_blank" class="footer__adress"
+                            >0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670</a
                         >
                     </div>
                     <p class="footer__copyright">© 2022 Mules of Wall Street | All rights reserved</p>
