--- a/index_ch.html
+++ b/index_ch.html
@@ -153,7 +153,7 @@
                                 <span>华尔街骡子</span> 会员卡授予仅适用于员工的福利和独家莱佛士。
                             </p>
                             <div class="general__buttons">
-                                <a href="https://opensea.io/collection/wallstreetmules" target="_blank" class="btn"
+                                <a href="https://opensea.io/collection/wall-street-mules" target="_blank" class="btn"
                                     >在opensea上购买</a
                                 >
                                 <a href="https://discord.com/" target="_blank" class="btn btn-white"
@@ -433,8 +433,8 @@
                         </li>
                     </ul>
                     <div class="footer__links">
-                        <a href="https://etherscan.io/" target="_blank" class="footer__adress"
-                            >0x4ghfdgklhgfl83ljfdgbdfjg4385lcbndlbn93294lmxcbnb84</a
+                        <a href="https://etherscan.io/address/0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670" target="_blank" class="footer__adress"
+                            >0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670</a
                         >
                     </div>
                     <p class="footer__copyright">©2022骡子街|版权所有</p>
