--- a/mint_ch.html
+++ b/mint_ch.html
@@ -204,8 +204,8 @@
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__links">
-                        <a href="https://etherscan.io/" target="_blank" class="footer__adress"
-                            >0x4ghfdgklhgfl83ljfdgbdfjg4385lcbndlbn93294lmxcbnb84</a
+                        <a href="https://etherscan.io/address/0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670" target="_blank" class="footer__adress"
+                            >0x4F44A3bF7D20Fd2F6349e17BB74Afe95ef607670</a
                         >
                     </div>
                     <p class="footer__copyright">©2022骡子街|版权所有</p>
