--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a href="https://discord.com/" target="_blank">
+                            <a href="https://discord.gg/m4u6E7Nbz8" target="_blank">
                                 <img src="img/icons/ds.svg" alt="Ds icon" />
                             </a>
                         </li>
@@ -157,7 +157,7 @@
                                 <a href="https://opensea.io/collection/wall-street-mules" target="_blank" class="btn"
                                     >Buy on OpenSea</a
                                 >
-                                <a href="https://discord.com/" target="_blank" class="btn btn-white"
+                                <a href="https://discord.gg/m4u6E7Nbz8" target="_blank" class="btn btn-white"
                                     >Join Discord</a
                                 >
                             </div>
@@ -423,7 +423,7 @@
                     <h2 class="title footer__title"><span>Mules</span> of Wall Street</h2>
                     <ul class="footer__socials">
                         <li class="footer__socials-item">
-                            <a href="https://discord.com/" target="_blank" class="footer__socials-link">
+                            <a href="https://discord.gg/m4u6E7Nbz8" target="_blank" class="footer__socials-link">
                                 <img src="img/footer/ds.svg" alt="Icon" />
                             </a>
                         </li>
