--- a/index_ch.html
+++ b/index_ch.html
@@ -104,7 +104,7 @@
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a href="https://discord.com/" target="_blank">
+                            <a href="https://discord.gg/m4u6E7Nbz8" target="_blank">
                                 <img src="img/icons/ds.svg" alt="Ds icon" />
                             </a>
                         </li>
@@ -156,7 +156,7 @@
                                 <a href="https://opensea.io/collection/wall-street-mules" target="_blank" class="btn"
                                     >在opensea上购买</a
                                 >
-                                <a href="https://discord.com/" target="_blank" class="btn btn-white"
+                                <a href="https://discord.gg/m4u6E7Nbz8" target="_blank" class="btn btn-white"
                                     >加入不和谐</a
                                 >
                             </div>
@@ -422,7 +422,7 @@
                     <h2 class="title footer__title"><span>骡子</span>华尔街</h2>
                     <ul class="footer__socials">
                         <li class="footer__socials-item">
-                            <a href="https://discord.com/" target="_blank" class="footer__socials-link">
+                            <a href="https://discord.gg/m4u6E7Nbz8" target="_blank" class="footer__socials-link">
                                 <img src="img/footer/ds.svg" alt="Icon" />
                             </a>
                         </li>
