--- a/mint_ch.html
+++ b/mint_ch.html
@@ -99,7 +99,7 @@
                     <!-- /.mobile__nav-wrapper -->
                     <ul class="socials">
                         <li class="socials-item">
-                            <a href="https://discord.com/" target="_blank">
+                            <a href="https://discord.gg/m4u6E7Nbz8" target="_blank">
                                 <img src="img/icons/ds.svg" alt="Ds icon" />
                             </a>
                         </li>
